========================
0.0.11
========================

========================
0.0.10
========================

- improved HTMLParser parser
- extended `Flow.socket(flow, socket, [verify(client)], [check(client, msg)])` by adding `check` argument for verifying permissions
- fixed icons in FlowStream core for TMS

========================
0.0.9
========================

- added missing method `NEWMIDDLEWARE()`
- fixed parsing `user-agent`
- fixed `Message-ID` generator for email messages
- improved `Number.round()` by [Tomáš Novák](https://github.com/tomee03)
- added missing `$.hostname()` method in the `WebSocketController`
- added missing `$.address` property in the `WebSocketController`
- replaced `$.hostname` property with a method in the Schema/Auth Options
- __critital__ fixed cloning buffers in the `FlowStream`
- improved user-agent parser
- added `FILESTORAGE().clone(id, newid, [callback])` method
- fixed `FILESTORAGE().copy(id, newid, [callback])` method
- extended `PROXY(endpoint, stream_function(ctrl))` by adding support for a custom handler
- extended `REQUEST()` by adding `opt.writer {function(res)}` option
- added missing `TotalAPI()` method
- fixed `CONF.totalapi` key when initializing the framework
- added support for plugins in `TEMPLATE()` method
- fixed decoding of encoded HTML entities in the HTML parser
- fixed loading `empty` flow in `Flow.load()` method

========================
0.0.8
========================

- added `opt.retry()` method in to the `API` evaluation
- improved HTTP cache in debug mode
- added `Total.edit('socket_url')` for remote editing of source code
- added support for `scripts` folder
- added Total.remote('wss_totaljs_code_url') method for remote editing of the source-code
- added a better support for `*:tagname` prefixes in HTMLParser
- fixed context in the components
- fixed URL downloading templates in `TEMPLATE()` method
- fixed parsing of unpaired elements in HTMLParser